--- a/easyshop/WebContent/WEB-INF/web.xml
+++ b/easyshop/WebContent/WEB-INF/web.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>easyshop</display-name>
+  
+   <filter>
+      <filter-name>TokenAuthFilter</filter-name>
+      <filter-class>com.easy.core.filters.TokenAuthFilter</filter-class>
+  </filter>
+  <filter-mapping>
+      <filter-name>TokenAuthFilter</filter-name>
+      <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
   <filter>
       <filter-name>nutz</filter-name>
       <filter-class>org.nutz.mvc.NutFilter</filter-class>
